datasource db {
  provider     = "mysql"
  url          = env("PRODUCTION_DATABASE_URL")
  relationMode = "prisma"
}

generator client {
  provider = "prisma-client-js"
  previewFeatures = ["fullTextSearch", "fullTextIndex"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Profile {
  id String @id @default(uuid())
  externalUserId String @unique
  fullname String @db.Text
  imageUrl String @db.Text
  username String @unique
  bio String? @db.Text

  gameResult GameResult[]
  gameCreated Game[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Course {
  id          String  @id @default(uuid())
  userId      String
  title       String  @db.Text
  description String? @db.Text
  imageUrl    String? @db.Text
  price       Float? @default(0)
  isPublished Boolean @default(false)

  categoryId String?
  category   Category? @relation(fields: [categoryId], references: [id])

  attachments Attachment[]

  createdAt DateTime   @default(now())
  updateAt  DateTime   @updatedAt
  chapters  Chapter[]
  purchases Purchase[]

  @@index([categoryId])
  @@fulltext([title])
}

model Chapter {
  id          String  @id @default(uuid())
  title       String
  description String? @db.MediumText
  videoUrl    String? @db.Text
  videoType String? @db.Text
  position    Int
  isPublished Boolean @default(false)
  isFree      Boolean @default(false)

  muxData  MuxData?
  courseId String
  course   Course   @relation(fields: [courseId], references: [id], onDelete: Cascade)

  userProgress UserProgress[]

  createdAt DateTime @default(now())
  updateAt  DateTime @updatedAt

  @@index([courseId])
}

model MuxData {
  id         String  @id @default(uuid())
  assetId    String
  playbackId String?
  chapterId  String  @unique
  chapter    Chapter @relation(fields: [chapterId], references: [id], onDelete: Cascade)
}

model UserProgress {
  id     String @id @default(uuid())
  userId String

  chapterId String
  chapter   Chapter @relation(fields: [chapterId], references: [id], onDelete: Cascade)

  isCompleted Boolean  @default(false)
  createdAt   DateTime @default(now())
  updateAt    DateTime @updatedAt

  @@unique([userId, chapterId])
  @@index([chapterId])
}



model Category {
  id      String   @id @default(uuid())
  name    String   @unique
  courses Course[]
  quizzes Quiz[]
}

model Attachment {
  id   String @id @default(uuid())
  name String
  url  String @db.Text

  courseId String
  course   Course @relation(fields: [courseId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updateAt  DateTime @updatedAt

  @@index([courseId])
}

enum QuestionType {
  multipleChoice
  shortAnswer
  longAnswer
}

model Question {
  id          String   @id @default(uuid())
  question    String   @db.MediumText
  questionType QuestionType 
  imageUrl    String?  @db.Text
  answer      String   @db.Text
  isPublished Boolean  @default(true)
  explanation String   @db.MediumText
  options     Option[]
  quizId      String
  
  position    Int
  quiz        Quiz     @relation(fields: [quizId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updateAt  DateTime @updatedAt

  @@index([quizId])
}

model Option {
  id       String  @id @default(uuid())
  option   String  @db.Text
  imageUrl String? @db.Text
  position Int     @default(0)
  isKeyAnswer Boolean @default(false)

  questionId String
  question   Question @relation(fields: [questionId], references: [id], onDelete: Cascade)

  @@index([questionId])
}

model Quiz {
  id          String  @id @default(uuid())
  userId      String
  title       String  @db.Text
  description String? @db.Text
  imageUrl    String? @db.Text
  price       Float?
  isPublished Boolean @default(false)

  categoryId String?
  category   Category? @relation(fields: [categoryId], references: [id])

  learningActivitiesId String?
  learningActivities  LearningActivities?  @relation(fields: [learningActivitiesId], references: [id])

  questions   Question[]
  attachments QuizAttachment[]
  games Game[]

  createdAt DateTime @default(now())
  updateAt  DateTime @updatedAt

  @@index([categoryId])
  @@index([learningActivitiesId])
  @@fulltext([title])
}

model QuizAttachment {
  id   String @id @default(uuid())
  name String
  url  String @db.Text

  quizId String
  quiz   Quiz   @relation(fields: [quizId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updateAt  DateTime @updatedAt

  @@index([quizId])
}

model Purchase {
  id     String @id @default(uuid())
  userId String

  courseId String
  course   Course @relation(fields: [courseId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updateAt  DateTime @updatedAt

  @@unique([userId, courseId])
  @@index([courseId])
}

// Part schema for Modul Ajar

model studentTarget {

id String @id @default(uuid())
target String @db.Text

learningModules LearningModule[]
}
model learningModa {

id String @id @default(uuid())
moda String @db.Text

learningModules LearningModule[]
}

model PancasilaStudentsProfile {

id String @id @default(uuid())
name String @db.Text

learningModuleId String
learningModule LearningModule @relation(fields: [learningModuleId], references: [id])

@@index([learningModuleId])
}

model Subject {
  id String @id @default(uuid())
  name String @db.Text

  learningModule LearningModule[]

}

model Element{
  id  String @id @default(uuid())
  name String @db.Text
  expectedOutcome String @db.Text
  learningOutcomeId String
  learningOutcome LearningOutcome  @relation(fields: [learningOutcomeId], references: [id], onDelete: Cascade)

  createdAt DateTime @default(now())
  updateAt  DateTime @updatedAt
  @@index([learningOutcomeId])
}

model Phase{
  id String @id @default(uuid())
  name String @db.Text
  minClass Int
  maxClass Int

  learningOutcome LearningOutcome[]
  learningModule LearningModule[]

}

model LearningOutcome {
  id String @id @default(uuid())
  subject String @db.Text
  generalOutcome String @db.Text
  phaseId String?
  phase  Phase? @relation(fields: [phaseId], references: [id])
  element Element[]

  @@index([phaseId])
}

model LearningObjective {
  id String @id @default(uuid())
  content String @db.Text
  learningModuleId String
  learningModule LearningModule @relation(fields: [learningModuleId], references: [id], onDelete: Cascade)

  @@index([learningModuleId])

}

model MeaningfulComprehension{
  id String @id @default(uuid())
  content String @db.Text
  learningModuleId String
  learningModule LearningModule @relation(fields: [learningModuleId], references: [id], onDelete: Cascade)

  @@index([learningModuleId])

}

model LearningObjectiveFlows {
  id String @id @default(uuid())
  content String @db.Text
  Position Int

  learningModuleId String
  learningModule LearningModule @relation(fields: [learningModuleId], references: [id], onDelete: Cascade)

  @@index([learningModuleId])

}
model TriggerQuestion {
  id String @id @default(uuid())
  content String @db.Text
  position Int

  learningModuleId String
  learningModule LearningModule @relation(fields: [learningModuleId], references: [id], onDelete: Cascade)

  @@index([learningModuleId])

}
// Aktifitas Pembelajaran per Pertemuan
model LearningFlow{
  id String @id @default(uuid())
  title String
  position Int
  meeting Int?
  learningActivities LearningActivities[]


  learningModuleId String
  learningModule LearningModule @relation(fields: [learningModuleId], references: [id], onDelete: Cascade)

  @@index([learningModuleId])

}

// Aktifitas Pembelajaran: Pendahuluan, Inti, Akhir
model LearningActivities{
  id String @id @default(uuid())
  learningPhaseId String
  learningPhase LearningPhase[]

  quiz Quiz[]
  learningFlowId String
  learningFlow LearningFlow @relation(fields: [learningFlowId], references: [id], onDelete: Cascade)

  @@index([learningFlowId])


}

// Isi dari Aktifitas Pembelajaran
model LearningPhase{
  id String @id @default(uuid())
  content String @db.Text
  position Int

  learningActivitiesId String
  learningActivities LearningActivities @relation(fields: [learningActivitiesId], references: [id], onDelete: Cascade)

  @@index([learningActivitiesId])

}

model EducationLevel {
  id String @id @default(uuid())
  name String @db.Text
  alias String
  position Int
  groupLevel Int

  learningModule LearningModule[]
}

model LearningModule {
  id String @id @default(uuid())
  userId String
  // Nama Penulis
  writer String?
  // Instansi Penulis
  institute String?
  // Tahun Pembelajaran
  learningYear String?
  // Judul Modul Ajar
  title String @db.Text
  // Jumlah Pertemuan
  numOfMeeting Int?
  // Jumlah jam pembelajaran dalam satuan menit
  learningHours Int?
  // Apakah Publish atau tidak
  isPublished Boolean @default(false)
  
  // Fase: A-F
  phaseId String?
  phase Phase? @relation(fields: [phaseId], references: [id])

  // Tingkat Pendidikan
  educationLevelId String?
  educationLevel EducationLevel? @relation(fields: [educationLevelId], references: [id])

  // Kelas
  class Int?

  // Mata Pelajaran
  subjectId String?
  subject Subject? @relation(fields: [subjectId], references: [id])

  // Moda Pembelajaran: Online, Offline, Blended, Online-Independent
  modaId String?
  moda learningModa? @relation(fields: [modaId], references: [id])

  // Model Pembelajaran: Diskusi, Project Based, dkk
  model String? @db.Text

  // Target Peserta Didik: Regular, Ambis, Tertinggal
  studentTargetId String?
  studentTarget studentTarget? @relation(fields: [studentTargetId], references: [id])

  // Profil Pelajar Pancasila
  tripleP PancasilaStudentsProfile[]

  // Materi Standar
  material String? @db.Text

  // Materi Kustom
  customMaterial String? @db.MediumText

  // Refleksi Pendidik
  teacherReflection String? @db.Text

  // Sarana dan Prasarana
  facilities String? @db.Text

  // Tujuan Pembelajaran
  learningObjective LearningObjective[]

  // Alur Tujuan Pembelajaran
  learningObjectiveFlows LearningObjectiveFlows[]

  // Metode Pembelajaran
  method String? @db.Text

  // Pemahaman Bermakna
  meaningfulComprehension MeaningfulComprehension[]

  // Pertanyaan Pemantik
  triggerQuestion TriggerQuestion[]

  // Kegiatan Pembelajaran
  learningFlow LearningFlow[]

  // Metadata pembuatan
  createdAt DateTime @default(now())
  updateAt  DateTime @updatedAt
  @@index([phaseId])
  @@index([studentTargetId])
  @@index([modaId])
  @@index([subjectId])
  @@index([educationLevelId])
}

enum uploadStatus {
  PENDING
  PROCESSING
  FAILED
  SUCCESS
}
model File {
  id String @id @default(uuid())
  userId String
  name String
   messages Message[]

  uploadStatus uploadStatus @default(PENDING)

  url String
  createdAt DateTime @default(now())
  updateAt DateTime @updatedAt
}

model Message {
  id   String @id @default(cuid())
  text String @db.Text()

  isUserMessage Boolean

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  userId    String?
  File      File?    @relation(fields: [fileId], references: [id])
  fileId    String?

  @@index([fileId])
}

enum GameType {
  SCHEDULED
  FLASH
}

model Game {
  id          String     @id @default(uuid())
  publicId String @unique @default(nanoid())

  profileId String
  profile Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  
  title String
  gameType GameType

  quizId String
  quiz   Quiz   @relation(fields: [quizId], references: [id])

  timeEnded   DateTime?
  timeLimit Int
  gameResult GameResult[]
  createdAt DateTime @default(now())
  

  @@index([quizId])
  @@index([profileId])
}

model GameResult {
  id String @id @default(uuid())
  profileId String
  profile Profile @relation(fields: [profileId], references: [id], onDelete: Cascade)
  
  gameId String
  game Game @relation(fields: [gameId], references: [id])
  isCompleted Boolean?
  time Int
  finalScore String @db.Text
  questionData String @db.LongText

  createdAt   DateTime @default(now())
  @@index([profileId])
  @@index([gameId])
}