//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Profile {
  id String [pk]
  externalUserId String [unique, not null]
  fullname String [not null]
  imageUrl String [not null]
  username String [unique, not null]
  bio String
  gameResult GameResult [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Course {
  id String [pk]
  userId String [not null]
  title String [not null]
  description String
  imageUrl String
  price Float [default: 0]
  isPublished Boolean [not null, default: false]
  categoryId String
  category Category
  attachments Attachment [not null]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
  chapters Chapter [not null]
  purchases Purchase [not null]
}

Table Chapter {
  id String [pk]
  title String [not null]
  description String
  videoUrl String
  videoType String
  position Int [not null]
  isPublished Boolean [not null, default: false]
  isFree Boolean [not null, default: false]
  muxData MuxData
  courseId String [not null]
  course Course [not null]
  userProgress UserProgress [not null]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table MuxData {
  id String [pk]
  assetId String [not null]
  playbackId String
  chapterId String [unique, not null]
  chapter Chapter [not null]
}

Table UserProgress {
  id String [pk]
  userId String [not null]
  chapterId String [not null]
  chapter Chapter [not null]
  isCompleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]

  indexes {
    (userId, chapterId) [unique]
  }
}

Table Category {
  id String [pk]
  name String [unique, not null]
  courses Course [not null]
  quizzes Quiz [not null]
}

Table Attachment {
  id String [pk]
  name String [not null]
  url String [not null]
  courseId String [not null]
  course Course [not null]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table Question {
  id String [pk]
  question String [not null]
  questionType QuestionType [not null]
  imageUrl String
  answer String [not null]
  isPublished Boolean [not null, default: true]
  explanation String [not null]
  options Option [not null]
  quizId String [not null]
  position Int [not null]
  quiz Quiz [not null]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table Option {
  id String [pk]
  option String [not null]
  imageUrl String
  position Int [not null, default: 0]
  isKeyAnswer Boolean [not null, default: false]
  questionId String [not null]
  question Question [not null]
}

Table Quiz {
  id String [pk]
  userId String [not null]
  title String [not null]
  description String
  imageUrl String
  price Float
  isPublished Boolean [not null, default: false]
  categoryId String
  category Category
  learningActivitiesId String
  learningActivities LearningActivities
  questions Question [not null]
  attachments QuizAttachment [not null]
  games Game [not null]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table QuizAttachment {
  id String [pk]
  name String [not null]
  url String [not null]
  quizId String [not null]
  quiz Quiz [not null]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table Purchase {
  id String [pk]
  userId String [not null]
  courseId String [not null]
  course Course [not null]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]

  indexes {
    (userId, courseId) [unique]
  }
}

Table studentTarget {
  id String [pk]
  target String [not null]
  learningModules LearningModule [not null]
}

Table learningModa {
  id String [pk]
  moda String [not null]
  learningModules LearningModule [not null]
}

Table PancasilaStudentsProfile {
  id String [pk]
  name String [not null]
  learningModuleId String [not null]
  learningModule LearningModule [not null]
}

Table Subject {
  id String [pk]
  name String [not null]
  learningModule LearningModule [not null]
}

Table Element {
  id String [pk]
  name String [not null]
  expectedOutcome String [not null]
  learningOutcomeId String [not null]
  learningOutcome LearningOutcome [not null]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table Phase {
  id String [pk]
  name String [not null]
  minClass Int [not null]
  maxClass Int [not null]
  learningOutcome LearningOutcome [not null]
  learningModule LearningModule [not null]
}

Table LearningOutcome {
  id String [pk]
  subject String [not null]
  generalOutcome String [not null]
  phaseId String
  phase Phase
  element Element [not null]
}

Table LearningObjective {
  id String [pk]
  content String [not null]
  learningModuleId String [not null]
  learningModule LearningModule [not null]
}

Table MeaningfulComprehension {
  id String [pk]
  content String [not null]
  learningModuleId String [not null]
  learningModule LearningModule [not null]
}

Table LearningObjectiveFlows {
  id String [pk]
  content String [not null]
  Position Int [not null]
  learningModuleId String [not null]
  learningModule LearningModule [not null]
}

Table TriggerQuestion {
  id String [pk]
  content String [not null]
  position Int [not null]
  learningModuleId String [not null]
  learningModule LearningModule [not null]
}

Table LearningFlow {
  id String [pk]
  title String [not null]
  position Int [not null]
  meeting Int
  learningActivities LearningActivities [not null]
  learningModuleId String [not null]
  learningModule LearningModule [not null]
}

Table LearningActivities {
  id String [pk]
  learningPhaseId String [not null]
  learningPhase LearningPhase [not null]
  quiz Quiz [not null]
  learningFlowId String [not null]
  learningFlow LearningFlow [not null]
}

Table LearningPhase {
  id String [pk]
  content String [not null]
  position Int [not null]
  learningActivitiesId String [not null]
  learningActivities LearningActivities [not null]
}

Table EducationLevel {
  id String [pk]
  name String [not null]
  alias String [not null]
  position Int [not null]
  groupLevel Int [not null]
  learningModule LearningModule [not null]
}

Table LearningModule {
  id String [pk]
  userId String [not null]
  writer String
  institute String
  learningYear String
  title String [not null]
  numOfMeeting Int
  learningHours Int
  isPublished Boolean [not null, default: false]
  phaseId String
  phase Phase
  educationLevelId String
  educationLevel EducationLevel
  class Int
  subjectId String
  subject Subject
  modaId String
  moda learningModa
  model String
  studentTargetId String
  studentTarget studentTarget
  tripleP PancasilaStudentsProfile [not null]
  material String
  customMaterial String
  teacherReflection String
  facilities String
  learningObjective LearningObjective [not null]
  learningObjectiveFlows LearningObjectiveFlows [not null]
  method String
  meaningfulComprehension MeaningfulComprehension [not null]
  triggerQuestion TriggerQuestion [not null]
  learningFlow LearningFlow [not null]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table File {
  id String [pk]
  userId String [not null]
  name String [not null]
  messages Message [not null]
  uploadStatus uploadStatus [not null, default: 'PENDING']
  url String [not null]
  createdAt DateTime [default: `now()`, not null]
  updateAt DateTime [not null]
}

Table Message {
  id String [pk]
  text String [not null]
  isUserMessage Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String
  File File
  fileId String
}

Table Game {
  id String [pk]
  publicId String [unique, not null]
  creatorId String [not null]
  title String [not null]
  gameType GameType [not null]
  quizId String [not null]
  quiz Quiz [not null]
  timeEnded DateTime
  timeLimit DateTime
  gameResult GameResult [not null]
  createdAt DateTime [default: `now()`, not null]
}

Table GameResult {
  id String [pk]
  profileId String [not null]
  profile Profile [not null]
  gameId String [not null]
  game Game [not null]
  isCompleted Boolean
  time Int [not null]
  finalScore String [not null]
  questionData String [not null]
  createdAt DateTime [default: `now()`, not null]
}

Enum QuestionType {
  multipleChoice
  shortAnswer
  longAnswer
}

Enum uploadStatus {
  PENDING
  PROCESSING
  FAILED
  SUCCESS
}

Enum GameType {
  SCHEDULED
  FLASH
}

Ref: Course.categoryId > Category.id

Ref: Chapter.courseId > Course.id [delete: Cascade]

Ref: MuxData.chapterId - Chapter.id [delete: Cascade]

Ref: UserProgress.chapterId > Chapter.id [delete: Cascade]

Ref: Attachment.courseId > Course.id [delete: Cascade]

Ref: Question.quizId > Quiz.id [delete: Cascade]

Ref: Option.questionId > Question.id [delete: Cascade]

Ref: Quiz.categoryId > Category.id

Ref: Quiz.learningActivitiesId > LearningActivities.id

Ref: QuizAttachment.quizId > Quiz.id [delete: Cascade]

Ref: Purchase.courseId > Course.id [delete: Cascade]

Ref: PancasilaStudentsProfile.learningModuleId > LearningModule.id

Ref: Element.learningOutcomeId > LearningOutcome.id [delete: Cascade]

Ref: LearningOutcome.phaseId > Phase.id

Ref: LearningObjective.learningModuleId > LearningModule.id [delete: Cascade]

Ref: MeaningfulComprehension.learningModuleId > LearningModule.id [delete: Cascade]

Ref: LearningObjectiveFlows.learningModuleId > LearningModule.id [delete: Cascade]

Ref: TriggerQuestion.learningModuleId > LearningModule.id [delete: Cascade]

Ref: LearningFlow.learningModuleId > LearningModule.id [delete: Cascade]

Ref: LearningActivities.learningFlowId > LearningFlow.id [delete: Cascade]

Ref: LearningPhase.learningActivitiesId > LearningActivities.id [delete: Cascade]

Ref: LearningModule.phaseId > Phase.id

Ref: LearningModule.educationLevelId > EducationLevel.id

Ref: LearningModule.subjectId > Subject.id

Ref: LearningModule.modaId > learningModa.id

Ref: LearningModule.studentTargetId > studentTarget.id

Ref: Message.fileId > File.id

Ref: Game.quizId > Quiz.id

Ref: GameResult.profileId > Profile.id [delete: Cascade]

Ref: GameResult.gameId > Game.id